<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_topic"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_topic" />
        <item
            android:id="@+id/nav_level"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/nav_level" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/nav_bookmarks" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_leaderboard" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_settings" />
    </group>
</menu>

